src/objects/AcctSeed__Period_Task__c.object
<CustomObject>
    <description>This will allow our clients to set up recurring &apos;checklist&apos; tasks around their accounting calendar.</description>
    <fields>
        <fullName>AcctSeed__Accounting_Period_Offset__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <inlineHelpText>The accounting period offset is when the task is being performed compared to when the accounting period ends. So a June task for a May accounting period would have an offset of -1.</inlineHelpText>
        <label>Accounting Period Offset</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-12</fullName>
                </value>
                <value>
                    <fullName>-11</fullName>
                </value>
                <value>
                    <fullName>-10</fullName>
                </value>
                <value>
                    <fullName>-9</fullName>
                </value>
                <value>
                    <fullName>-8</fullName>
                </value>
                <value>
                    <fullName>-7</fullName>
                </value>
                <value>
                    <fullName>-6</fullName>
                </value>
                <value>
                    <fullName>-5</fullName>
                </value>
                <value>
                    <fullName>-4</fullName>
                </value>
                <value>
                    <fullName>-3</fullName>
                </value>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Active__c</fullName>
        <formula>IF(ISPICKVAL(AcctSeed__Ends_On__c, &apos;Never&apos;), true,
					IF(AND(ISPICKVAL(AcctSeed__Ends_On__c, &apos;End Date&apos;),  AcctSeed__Next_Accounting_Period_Task_Date__c &gt;=  AcctSeed__End_Date__c), false,
					    IF(AND(ISPICKVAL(AcctSeed__Ends_On__c, &apos;Number of Occurrences&apos;),  AcctSeed__Occurrences__c &gt;= AcctSeed__Number_of_Occurrences__c), false
,true)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person who will accomplish the task.</inlineHelpText>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounting_Period_Recurring_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Comments__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Create_Date__c</fullName>
        <inlineHelpText>When the task is created in reference to the due date.</inlineHelpText>
        <label>Create Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Due_Date__c</fullName>
        <inlineHelpText>Due date is used to calculate the number of days between the Create Date and the Due Date. A task created on the 10th of the month and the Due Date is 5 days later, the task due date is the 15th. However, this may vary at the end of the month.</inlineHelpText>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__End_Date__c</fullName>
        <inlineHelpText>The date when this task will no longer be generated.  Setting a task to end on 12/31 will cause this task to only run this year.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ends_On__c</fullName>
        <inlineHelpText>How long the task will continue to be scheduled.</inlineHelpText>
        <label>Ends On</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Number of Occurrences</fullName>
                </value>
                <value>
                    <fullName>End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Exclude_from_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Exclude this task from Automation so it will not be automatically generated.</inlineHelpText>
        <label>Exclude from Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Frequency_Num__c</fullName>
        <inlineHelpText>Number used for the frequency. Repeat this task every 2 weeks starting today for example.</inlineHelpText>
        <label>Repeat Every</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Frequency_Type__c</fullName>
        <label>Frequency Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Last_Accounting_Period_Task_Date__c</fullName>
        <label>Last Accounting Period Task Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Last_Accounting_Period_Task_Due_Date__c</fullName>
        <label>Last Accounting Period Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select ledger that task is associated with.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipName>Period_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Never__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The task will continue to be scheduled.</inlineHelpText>
        <label>Never</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Next_Accounting_Period_Task_Date__c</fullName>
        <label>Next Accounting Period Task Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Next_Accounting_Period_Task_Due_Date__c</fullName>
        <label>Next Accounting Period Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Number_of_Occurrences__c</fullName>
        <inlineHelpText>The number of times this task will get scheduled.</inlineHelpText>
        <label>Number of Occurrences</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Occurrences__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Used for determining when to stop creating tasks.</inlineHelpText>
        <label>Occurrences</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Priority__c</fullName>
        <inlineHelpText>The priority of the task</inlineHelpText>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Sort_Order__c</fullName>
        <inlineHelpText>Where in the current list, the task should be ordered.</inlineHelpText>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>The status can be: Not started, In Progress, Waiting on Someone, Completed, or Deferred.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on Someone Else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Accounting Period Recurring Task</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Sort_Order__c</columns>
        <columns>AcctSeed__Assignee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Frequency_Num__c</columns>
        <columns>AcctSeed__Frequency_Type__c</columns>
        <columns>AcctSeed__Priority__c</columns>
        <columns>AcctSeed__Last_Accounting_Period_Task_Due_Date__c</columns>
        <columns>AcctSeed__Next_Accounting_Period_Task_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Completed</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Sort_Order__c</columns>
        <columns>AcctSeed__Assignee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Frequency_Num__c</columns>
        <columns>AcctSeed__Frequency_Type__c</columns>
        <columns>AcctSeed__Priority__c</columns>
        <columns>AcctSeed__Last_Accounting_Period_Task_Due_Date__c</columns>
        <columns>AcctSeed__Next_Accounting_Period_Task_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Deferred</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Sort_Order__c</columns>
        <columns>AcctSeed__Assignee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Frequency_Num__c</columns>
        <columns>AcctSeed__Frequency_Type__c</columns>
        <columns>AcctSeed__Priority__c</columns>
        <columns>AcctSeed__Last_Accounting_Period_Task_Due_Date__c</columns>
        <columns>AcctSeed__Next_Accounting_Period_Task_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Deferred</value>
        </filters>
        <label>Deferred</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__In_Progress</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Sort_Order__c</columns>
        <columns>AcctSeed__Assignee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Frequency_Num__c</columns>
        <columns>AcctSeed__Frequency_Type__c</columns>
        <columns>AcctSeed__Priority__c</columns>
        <columns>AcctSeed__Last_Accounting_Period_Task_Due_Date__c</columns>
        <columns>AcctSeed__Next_Accounting_Period_Task_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Not_Started</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Sort_Order__c</columns>
        <columns>AcctSeed__Assignee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Frequency_Num__c</columns>
        <columns>AcctSeed__Frequency_Type__c</columns>
        <columns>AcctSeed__Priority__c</columns>
        <columns>AcctSeed__Last_Accounting_Period_Task_Due_Date__c</columns>
        <columns>AcctSeed__Next_Accounting_Period_Task_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <label>Not Started</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Waiting_on_Someone</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Sort_Order__c</columns>
        <columns>AcctSeed__Assignee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Frequency_Type__c</columns>
        <columns>AcctSeed__Priority__c</columns>
        <columns>AcctSeed__Frequency_Num__c</columns>
        <columns>AcctSeed__Last_Accounting_Period_Task_Due_Date__c</columns>
        <columns>AcctSeed__Next_Accounting_Period_Task_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Waiting on Someone Else</value>
        </filters>
        <label>Waiting on Someone</label>
    </listViews>
    <nameField>
        <label>Accounting Period Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Period Recurring Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__End_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISPICKVAL(AcctSeed__Ends_On__c, &apos;End Date&apos;), ISNULL(AcctSeed__End_Date__c)), true, false)</errorConditionFormula>
        <errorMessage>Please select an end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Occurrences_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISPICKVAL(AcctSeed__Ends_On__c, &apos;Number of Occurrences&apos;), ISNULL(AcctSeed__Number_of_Occurrences__c)), true, false)</errorConditionFormula>
        <errorMessage>Please enter the number of occurrences.</errorMessage>
    </validationRules>
</CustomObject>